Stop navigation backdrop cutting off at small viewport heights

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -17,7 +17,7 @@ body {
 	background-attachment: fixed;
 	bottom: 0;
 	left: 0;
-	position: absolute;
+	position: fixed;
 	right: 0;
 	top: 0;
 	z-index: -1;
